Toggle menu items

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="bar3"></div>
       </div>
       <nav id="desktop-nav">
-        <ul>
+        <ul class="list-items">
           <li><a class="nav-link" href="#projects">Portoflio</a></li>
           <li><a class="nav-link" href="#about-me">About</a></li>
           <li>
