--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="bar2"></div>
         <div class="bar3"></div>
       </div>
-      <nav id="desktop-nav">
+      <nav id="desktop-nav" class="desktop-nav">
         <ul class="list-items">
           <li><a class="nav-link" href="#projects">Portoflio</a></li>
           <li><a class="nav-link" href="#about-me">About</a></li>
